# lab1-k-dizzled-sokoban-rust

./: Cargo.toml  build.sh
neardev/: dev-account  dev-account.env
res/: rust_near_sokoban.wasm
rust_near_sokoban/: Cargo.toml
rust_near_sokoban/src/: auxiliary.rs  board.rs  game.rs  lib.rs  utils.rs
sb_token/: Cargo.toml
sb_token/src/: lib.rs
src/: auxiliary.rs  board.rs  lib.rs
